Fixed spacing between toggle and table

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -123,7 +123,8 @@ table
     width: 100%
     background:  $dark-hover
     color: $delta
-    padding: 10px 0px 20px 20px
+    padding: 10px 20px 20px 20px
+    margin-bottom: 20px
     border: none
     border-radius: 8px
     font-size: 16px
